<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/informacoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/pagamento_texto_topo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="20dp"/>
    <TextView
            android:text="@string/valor_da_compra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pagamento_valor_compra_texto"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/pagamento_texto_topo"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pagamento_valor"
            app:layout_constraintStart_toStartOf="@+id/pagamento_valor_compra_texto"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pagamento_valor_compra_texto"
            tools:text="R$ 421,50"
            android:textSize="24sp"
            android:textColor="@android:color/holo_green_dark"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/pagamento_numero_cartao"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pagamento_valor"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="number"
            android:hint="@string/numero_do_cartao"
            android:maxLength="12"/>

    <EditText
            android:id="@+id/pagamento_mes_cartao"
            android:layout_height="wrap_content"
            android:layout_width="40dp"
            android:gravity="center"
            android:hint="@string/mm"
            android:maxLength="2"
            android:inputType="number"
            app:layout_constraintStart_toStartOf="@+id/pagamento_numero_cartao"
            app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"/>

    <EditText
            android:id="@+id/pagamento_ano_cartao"
            android:layout_height="wrap_content"
            android:layout_width="40dp"
            android:gravity="center"
            android:hint="@string/aa"
            android:maxLength="2"
            android:inputType="number"
            app:layout_constraintStart_toEndOf="@+id/pagamento_mes_cartao"
            app:layout_constraintBottom_toBottomOf="@+id/pagamento_cvc_cartao"/>

    <EditText
            android:id="@+id/pagamento_cvc_cartao"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:gravity="center"
            android:hint="@string/cvc"
            android:maxLength="3"
            android:inputType="number"
            android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
            android:drawableLeft="@drawable/ic_cvc_cartao_de_credito"
            app:layout_constraintTop_toBottomOf="@+id/pagamento_numero_cartao"
            app:layout_constraintEnd_toEndOf="@+id/pagamento_numero_cartao"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/pagamento_nome_no_cartao"
            android:layout_margin="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pagamento_cvc_cartao"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="text"
            android:digits="abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ "
            android:hint="@string/nome_do_cartao"/>
    <Button
            android:text="@string/finalizar_compra"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/pagamento_finalizar_compra" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pagamento_nome_no_cartao"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:background="@drawable/botao_redondo_laranja"
            android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>