<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="120dp"
            app:srcCompat="@color/colorPrimary"
            android:id="@+id/lista_pacotes_banner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:adjustViewBounds="false"
            android:contentDescription="@string/banner_inicial"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/especiais"
            app:layout_constraintBottom_toBottomOf="@id/lista_pacotes_banner"
            app:layout_constraintLeft_toLeftOf="@id/lista_pacotes_banner"
            app:layout_constraintRight_toRightOf="@id/lista_pacotes_banner"
            app:layout_constraintTop_toTopOf="@id/lista_pacotes_banner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:layout_margin="20dp"
            android:id="@+id/lista_pacotes_especiais"
            android:textColor="@android:color/white"
            android:textSize="24sp"/>
    <TextView
            android:text="@string/pais"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lista_pacotes_pais"
            app:layout_constraintTop_toBottomOf="@+id/lista_pacotes_especiais"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/lista_pacotes_especiais"
            android:textColor="@android:color/white"/>

    <ListView
            android:id="@+id/lista_pacotes_listview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            tools:listitem="@layout/item_pacote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lista_pacotes_banner"
            android:divider="@null"
            android:dividerHeight="0dp"/>

</android.support.constraint.ConstraintLayout>