<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:src="@android:color/holo_orange_dark"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/resumo_compra_banner_topo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/fundo_topo"/>
    <TextView
            android:text="@string/parabens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_compra_parabens"
            app:layout_constraintTop_toTopOf="@+id/resumo_compra_banner_topo"
            app:layout_constraintStart_toStartOf="@+id/resumo_compra_banner_topo"
            app:layout_constraintBottom_toBottomOf="@+id/resumo_compra_banner_topo"
            app:layout_constraintEnd_toEndOf="@+id/resumo_compra_banner_topo"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:layout_margin="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:gravity="center"/>
    <TextView
            android:text="@string/compra_sucesso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_compra_sucesso"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resumo_compra_parabens"
            app:layout_constraintEnd_toEndOf="@+id/resumo_compra_parabens"
            app:layout_constraintStart_toStartOf="@+id/resumo_compra_parabens"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:gravity="center"/>
    <TextView
            android:text="@string/resumo_compra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_compra_confira"
            app:layout_constraintTop_toBottomOf="@+id/resumo_compra_banner_topo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:layout_margin="8dp"/>

    <ImageView
            tools:src="@drawable/sao_paulo_sp"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:id="@+id/resumo_compras_imagem"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resumo_compra_confira"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_compras_local"
            app:layout_constraintTop_toBottomOf="@+id/resumo_compras_imagem"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            tools:text="São Paulo"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_compras_data"
            app:layout_constraintStart_toStartOf="@+id/resumo_compras_local"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resumo_compras_local"
            tools:text="08/12 - 10/12 de 2017"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_compras_valor"
            app:layout_constraintStart_toStartOf="@+id/resumo_compras_data"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resumo_compras_data"
            tools:text="R$ 243,99"/>
</android.support.constraint.ConstraintLayout>