<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="140dp"
            tools:srcCompat="@drawable/sao_paulo_sp"
            android:id="@+id/resumo_imagem"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop"
            app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/imagem_do_pacote"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_local"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resumo_imagem"
            android:textStyle="bold"
            tools:text="São Paulo"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_dias"
            app:layout_constraintStart_toStartOf="@+id/resumo_local"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/resumo_local"
            tools:text="2 dias"
            android:textSize="16sp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_data"
            app:layout_constraintStart_toStartOf="@+id/resumo_dias"
            app:layout_constraintTop_toBottomOf="@+id/resumo_dias"
            tools:text="08/12 - 10/12 de 2017"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toStartOf="@+id/resumo_preco"
            app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_preco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/resumo_data"
            app:layout_constraintStart_toEndOf="@id/resumo_data"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            tools:text="R$ 243,99"
            android:textSize="20sp"
            android:textColor="@android:color/holo_green_dark"
            android:gravity="end"/>
    <TextView
            android:text="@string/preco_final"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@+id/resumo_preco"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toTopOf="@+id/resumo_preco"/>
    <Button
            android:text="@string/realizar_pagamento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/resumo_realizar_pagamento"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/resumo_imagem"
            app:layout_constraintVertical_bias="1.0"
            android:background="@drawable/botao_redondo_laranja"
            android:textColor="@android:color/white"/>
</android.support.constraint.ConstraintLayout>